--- a/app/views/records/_form.html.erb
+++ b/app/views/records/_form.html.erb
@@ -55,6 +55,16 @@
     <%= form.label :creation_date %>
     <%= form.date_select :creation_date %>
   </div>
+  
+  <div class="field">
+    <%= form.label :Lat %>
+    <%= form.text_field :Lat %>
+  </div>
+  
+  <div class="field">
+    <%= form.label :Long %>
+    <%= form.text_field :Long %>
+  </div>
 
   <div class="actions">
     <%= form.submit %>
