--- a/app/views/records/show.html.erb
+++ b/app/views/records/show.html.erb
@@ -45,5 +45,15 @@
   <%= @record.creation_date %>
 </p>
 
+<p>
+  <strong>Lat:</strong>
+  <%= @record.Lat %>
+</p>
+
+<p>
+  <strong>Long:</strong>
+  <%= @record.Long %>
+</p>
+
 <%= link_to 'Edit', edit_record_path(@record) %> |
 <%= link_to 'Back', records_path %>
