add link to creating new record

--- a/app/views/imports/show.html.erb
+++ b/app/views/imports/show.html.erb
@@ -6,8 +6,10 @@
 </p>
 
 <div id="records">
-  <h5>Records</h5>
+  <h4>Records</h4>
   <%= render @import.records %>
+  <h5>Add a record</h5>
+  <%= render partial: "records/form", locals: {record: @imports.record.new} %>
 </div>
 
 <%= link_to 'Edit', edit_import_path(@import) %> |
