--- a/app/views/imports/show.html.erb
+++ b/app/views/imports/show.html.erb
@@ -9,7 +9,7 @@
   <h4>Records</h4>
   <%= render @import.records %>
   <h5>Add a record</h5>
-  <%= render partial: "records/form", locals: {record: @imports.record.new} %>
+  <%= render partial: "records/form", locals: {record: @import.records.new} %>
 </div>
 
 <%= link_to 'Edit', edit_import_path(@import) %> |
