show full record info on import show page

--- a/app/views/records/_record.html.erb
+++ b/app/views/records/_record.html.erb
@@ -1,3 +1,13 @@
 <div>
   <%= record.name %>
+  <%= record.address %>
+  <%= record.address_2 %>
+  <%= record.city %>
+  <%= record.state %>
+  <%= record.zip %>
+  <%= record.purpose %>
+  <%= record.property_owner %>
+  <%= record.creation_date %>
+  <%= record.lat %>
+  <%= record.long %>
 </div>
