added google maps api

--- a/app/views/stun/index.html.erb
+++ b/app/views/stun/index.html.erb
@@ -9,6 +9,7 @@
   <div id="map"></div>
 </div>
 <div class="csv"></div>
+<script async="" defer="" src="https://maps.googleapis.com/maps/api/js?key=<%= ENV["google_maps_api"] %>"></script>
 <script>
   main();
 </script>
